src/test/resources/model_test/valid/FourEntities_model/Country.entity
Country {
//	id : integer {@Id};
	id : int {@Id};
	name : string;
}
